--- a/inventory_tools/inventory_tools/doctype/inventory_tools_settings/inventory_tools_settings.json
+++ b/inventory_tools/inventory_tools/doctype/inventory_tools_settings/inventory_tools_settings.json
@@ -25,9 +25,14 @@
 		"overproduction_percentage_for_work_order",
 		"section_break_0",
 		"update_warehouse_path",
-		"section_break_gzcbr",
+		"column_break_ddssn",
+		"allow_alternative_workstations",
 		"uoms_section",
-		"enforce_uoms"
+		"enforce_uoms",
+		"faceted_search_tab",
+		"section_break_pxnx",
+		"show_on_website",
+		"show_in_listview"
 	],
 	"fields": [
 		{
@@ -88,11 +93,6 @@
 			"label": "Update Warehouse Path"
 		},
 		{
-			"fieldname": "section_break_gzcbr",
-			"fieldtype": "Section Break",
-			"label": "Warehouses"
-		},
-		{
 			"fieldname": "uoms_section",
 			"fieldtype": "Section Break",
 			"label": "UOMs"
@@ -146,11 +146,43 @@
 			"fieldtype": "Link",
 			"label": "Aggregated Sales Warehouse",
 			"options": "Warehouse"
+		},
+		{
+			"fieldname": "faceted_search_tab",
+			"fieldtype": "Tab Break",
+			"label": "Faceted Search"
+		},
+		{
+			"default": "0",
+			"fieldname": "show_on_website",
+			"fieldtype": "Check",
+			"label": "Show on Website"
+		},
+		{
+			"default": "0",
+			"fieldname": "show_in_listview",
+			"fieldtype": "Check",
+			"label": "Show in Listview"
+		},
+		{
+			"fieldname": "column_break_ddssn",
+			"fieldtype": "Column Break"
+		},
+		{
+			"default": "0",
+			"fieldname": "allow_alternative_workstations",
+			"fieldtype": "Check",
+			"label": "Allow Alternative Workstations"
+		},
+		{
+			"description": "These settings will apply to all companies",
+			"fieldname": "section_break_pxnx",
+			"fieldtype": "Section Break"
 		}
 	],
 	"index_web_pages_for_search": 1,
 	"links": [],
-	"modified": "2024-04-12 10:02:32.688310",
+	"modified": "2024-08-05 10:12:40.728422",
 	"modified_by": "Administrator",
 	"module": "Inventory Tools",
 	"name": "Inventory Tools Settings",
