--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
 	"name": "inventory_tools",
-	"scripts": {},
-	"dependencies": {
-		"onscan.js": "^1.5.2"
-	},
-	"devDependencies": {},
+	"private": true,
+	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/agritheory/invnetory_tools.git"
+		"url": "https://github.com/agritheory/inventory_tools.git"
+	},
+	"scripts": {
+		"build": "vite build --config=./inventory_tools/public/js/vite.config.js",
+		"dev": "vite build --watch --config=./inventory_tools/public/js/vite.config.js"
+	},
+	"dependencies": {
+		"@vueuse/core": "^10.11.0",
+		"vue": "^3.4.35"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^5.1.2",
+		"vite": "^5.3.5"
 	},
 	"publishConfig": {
 		"access": "restricted"
-	},
-	"private": true
+	}
 }
